Fix overflow bug

--- a/app/assets/stylesheets/components/nav.sass
+++ b/app/assets/stylesheets/components/nav.sass
@@ -34,7 +34,7 @@ $nav-height: 3.25rem !default
 input.nav-item, .nav-item input
   background: transparent
   border: none
-  line-height: 2
+  height: 100%
   &:focus
     outline: 0
   &:hover
